# web2rss

./: .gitignore  README.md  TODO.md  models  package-lock.json  package.json  stack.yaml  web2rss.cabal
app/: Main.hs
js/: main.js
src/: Lib.hs  MyPrelude.hs
