name:                web2rss
version:             0.1.0.0
synopsis:            Periodically check websites and generate feeds on the changes
description:         Please see README.md
homepage:            http://github.com/daniellandau/web2rss
license:             AGPL-3
license-file:        LICENSE
author:              Daniel Landau
maintainer:          daniel@landau.fi
copyright:           2015 Daniel Landau
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , http-conduit
                     , tagsoup
                     , bytestring
                     , persistent-mysql
                     , persistent
                     , persistent-template
                     , time
                     , text
                     , monad-logger
                     , transformers
                     , feed
                     , xml
                     , old-locale
                     , uuid
  default-language:    Haskell2010

executable web2rss-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , web2rss
                     , persistent-mysql
                     , text
  default-language:    Haskell2010

test-suite web2rss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , web2rss
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/daniellandau/web2rss
